# hermes-provider-switcher

./: .gitignore  README.cn.md  README.ko.md  README.md  __init__.py  config.py  config.yaml.example  plugin.yaml  providers.py  pyproject.toml  schemas.py
scripts/: check-keys.sh  install.sh  migrate-keys.sh  setup-keys.sh
skills/provider-switcher/: SKILL.md
skills/setup/: SKILL.md
src/hermes_provider_switcher/: __init__.py  plugin.yaml  schemas.py  tools.py
